--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BÁO CÁO CHÍNH TRỊ </title>
+  <title>BÁO CÁO CHÍNH TRỊ HỘI PHỤ NỮ CÔNG TY XÂY DỰNG CÔNG NGHIỆP MỎ</title>
   <style>
     body {
       margin: 0;
@@ -70,7 +70,7 @@
 </head>
 <body>
   <header>
-    <img src="https://dl.dropbox.com/scl/fi/kxwb7gz3geuyjean0pa4p/Slide3.JPG?rlkey=d3e6fql4sv07qe25inf8a230q&st=fgz73mlk&dl=0" alt="Banner Đại hội đoàn">
+    <img src="https://dl.dropbox.com/scl/fi/4upj72iywls6luve1dddr/bannerHPN.png?rlkey=nk0vsng7w9zb11jrnqf21arky&st=n7wacw5k&dl=0&dl=0" alt="Banner Đại hội đoàn">
   </header>
 
   <h1>Tài liệu phục vụ Đại hội Đoàn cơ sở</h1>
@@ -86,7 +86,8 @@
 </div>
 <div> <br> </div>
   <header>
-    <img src="https://dl.dropbox.com/scl/fi/yhcivhrqlaeng9fulh49n/Slide1-Copy.JPG?rlkey=lspz5wjwfjifclfqiuv5itdsk&st=fdbdred6&dl=0" alt="">
+    <img src="https://dl.dropbox.com/scl/fi/pel52jpl1g377tpa3cigg/footder.png?rlkey=5tkujyewfok6h0lemlidznnzr&st=drviddhi&dl=0" alt="">
   </header>
 </body>
 </html>
+
