--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 </head>
 <body>
   <header>
-    <img src="https://dl.dropbox.com/scl/fi/4upj72iywls6luve1dddr/bannerHPN.png?rlkey=nk0vsng7w9zb11jrnqf21arky&st=n7wacw5k&dl=0&dl=0" alt="Banner Đại hội đoàn">
+    <img src="https://dl.dropbox.com/scl/fi/4upj72iywls6luve1dddr/bannerHPN.png?rlkey=nk0vsng7w9zb11jrnqf21arky&st=sczwgkyb&dl=0" alt="Banner Đại hội Phụ nữ">
   </header>
 
-  <h1>Tài liệu phục vụ Đại hội Đoàn cơ sở</h1>
+  <h1>Tài liệu phục vụ Đại hội Phụ nữ Công ty Xây dựng Công nghiệp mỏ</h1>
 
   <a class="btn-download" href="https://dl.dropbox.com/scl/fi/q6xp0f80h1b4xca581zrl/BC-ch-nh-tr-i-h-c-o-n-CS-CNM.pdf?rlkey=6d6o1guussztx846tu7s7lkae&st=p2md8770&dl=0" target="_blank">📥 Tải xuống tài liệu</a>
 
@@ -90,4 +90,5 @@
   </header>
 </body>
 </html>
+
 
