--- a/hoivienhoiphunucnm/index.html
+++ b/hoivienhoiphunucnm/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hội viên hội phụ nữ Công ty Xây dựng Công nghiệp mỏ #id</title>
+  <title>Hội viên hội phụ nữ Công ty Xây dựng Công nghiệp mỏ</title>
   <style>
     body {
       margin: 0;
@@ -85,6 +85,7 @@
   </script>
 </body>
 </html>
+
 
 
 
