--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
   <header>
     <img src="https://dl.dropbox.com/scl/fi/4upj72iywls6luve1dddr/bannerHPN.png?rlkey=nk0vsng7w9zb11jrnqf21arky&st=sczwgkyb&dl=0" alt="Banner Đại hội Phụ nữ">
   </header>
-
-  <h1>Tài liệu phục vụ Đại hội Phụ nữ Công ty Xây dựng Công nghiệp mỏ</h1>
+<!--
+ <h1>Tài liệu phục vụ Đại hội Phụ nữ Công ty Xây dựng Công nghiệp mỏ</h1> *
 
   <a class="btn-download" href="https://dl.dropbox.com/scl/fi/q6xp0f80h1b4xca581zrl/BC-ch-nh-tr-i-h-c-o-n-CS-CNM.pdf?rlkey=6d6o1guussztx846tu7s7lkae&st=p2md8770&dl=0" target="_blank">📥 Tải xuống tài liệu</a>
-
+-->
 <div style="position: relative; width: 100%; max-width: 900px; margin: auto; aspect-ratio: 9/12; border: 2px solid #0077cc; border-radius: 10px; overflow: hidden;">
   <iframe 
     src="https://drive.google.com/file/d/13oKBNqOdEGDqX2_ajsJXPIxluaUFVguG/preview" width="640" height="480" allow="autoplay" 
@@ -90,6 +90,7 @@
   </header>
 </body>
 </html>
+
 
 
 
